--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
+            <img class="img-fluid" src="/img/ultrasecreto.svg">
 
             <!-- Headline -->
             <h3 class="my-4"><b>A SEQUÊNCIA DE CLIQUES <br>PARA VENDER 1 IMÓVEL POR SEMANA</br>  </b></h3>
