--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Headline -->
             <h3 class="my-4"><b>O PASSO A PASSO <br> <font color="#C9E265">PARA VENDER 1 IMÓVEL POR SEMANA</font></br></b></h2></h3>
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_63b996c4efa353000a44a12f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63b996c4efa353000a44a12f" src="https://images.converteai.net/2210671d-9390-49de-9ca6-1e54669abcdb/players/63b996c4efa353000a44a12f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63b996c4efa353000a44a12f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63b996c4efa353000a44a12f">var s=document.createElement("script");s.src="https://scripts.converteai.net/2210671d-9390-49de-9ca6-1e54669abcdb/players/63b996c4efa353000a44a12f/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
