--- a/index.html
+++ b/index.html
@@ -43,13 +43,49 @@
             <div id="vid_63b996c4efa353000a44a12f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63b996c4efa353000a44a12f" src="https://images.converteai.net/2210671d-9390-49de-9ca6-1e54669abcdb/players/63b996c4efa353000a44a12f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63b996c4efa353000a44a12f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63b996c4efa353000a44a12f">var s=document.createElement("script");s.src="https://scripts.converteai.net/2210671d-9390-49de-9ca6-1e54669abcdb/players/63b996c4efa353000a44a12f/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
-            <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/fGptJlE" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn"> <font color="#C9E265">QUERO OBTER ACESSO!</font></span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
-              </a>
-            </div>
-
+<body>
+    <div class="content">
+     <a href="#" class="botao01">
+      <font color=""><font size="6"><center>QUERO OBTER ACESSO!</font></font></center>
+    </a>
+     <style>
+     
+     .botao01{
+      position: relative;
+      top: 18px;
+      width: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color:#C9E265;
+      font-family: poppins;
+      font-weight: 300;
+      border-radius: 10px;
+      overflow: hidden;
+      cursor: pointer;
+      background-color: #1B0639;
+      text-decoration:none;
+      cursor: hand;
+      cursor: pointer;
+      border: 1px solid #1B0639;
+      background: #1B0639;
+      outline: none;
+      box-sizing: border-box;
+     }
+     .botao01 {
+      width: 100%;
+      height: 100%;
+      border-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+      transition: all 305500ms;
+      text-decoration: none;
+}
+     </style> 
+<body>
+    
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
           </div>
@@ -58,7 +94,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 00000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 0000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
