--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Botão -->
 <body>
     <div class="content">
-     <a href="#" class="botao01">
+     <a href="https://pay.kiwify.com.br/fGptJlE" class="botao01">
       <font color=""><font size="6"><center>QUERO OBTER ACESSO!</font></font></center>
     </a>
      <style>
