--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ src="https://www.facebook.com/tr?id=3079961665622601&ev=PageView&noscript=1"
      .botao01{
       position: relative;
       top: 18px;
+      left: 120px;
       width: 400px;
       display: flex;
       align-items: center;
@@ -81,18 +82,18 @@ src="https://www.facebook.com/tr?id=3079961665622601&ev=PageView&noscript=1"
       border-radius: 10px;
       overflow: hidden;
       cursor: pointer;
-      background-color: #1B0639;
+      background-color: #06045a;
       text-decoration:none;
       cursor: hand;
       cursor: pointer;
-      border: 1px solid #1B0639;
-      background: #1B0639;
+      border: 1px solid #06045a;
+      background: #05045ac9;
       outline: none;
       box-sizing: border-box;
      }
      .botao01 {
-      width: 100%;
-      height: 100%;
+      width: 70%;
+      height: 70%;
       border-radius: 15px;
       display: flex;
       justify-content: center;
